--- a/explorer.html
+++ b/explorer.html
@@ -325,6 +325,9 @@
     { url: '50 Pengetahuan Tambang rakyat Ramah Lingkungan.html', label: '50 Pengetahuan Tambang rakyat Ramah Lingkungan', icon: '📝', cat: 'cat-blue' },
     { url: '50 Jenis Pajak Profesi di Era System Stability Settlement.html', label: '50 Jenis Pajak Profesi di Era System Stability Settlement', icon: '📝', cat: 'cat-blue' },
     { url: '50 Jenis Wagunan Komunal Kerajaan.html', label: '50 Jenis Wagunan Komunal Kerajaan', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Teknologi Warisan Lemuria yang akan di Restorasi.html', label: '50 Teknologi Warisan Lemuria yang akan di Restorasi', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Jenis Alat Tukar Resmi Sunda Nuswantara.html', label: '50 Jenis Alat Tukar Resmi Sunda Nuswantara', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Aturan Standar Mutlak Warga Sunda Nuswantara.html', label: '50 Aturan Standar Mutlak Warga Sunda Nuswantara', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -529,6 +532,7 @@
     </script>
 </body>
 </html>
+
 
 
 
