--- a/Wiki Sundaland11.html
+++ b/Wiki Sundaland11.html
@@ -195,6 +195,7 @@
                 <li><a href="#protokol-baduy">3. Suku Baduy: Protokol Karantina Matrix</a></li>
                 <li><a href="#sunda-wiwitan">4. Sunda Wiwitan: Rumus "Iman = Ukuran"</a></li>
                 <li><a href="Wiki Sundaland13.html">5. Pakuan Pajajaran: Puncak Integrasi Sundaland</a></li>
+                <li><a href="Wiki Sundaland14.html">6. Tata Zonasi Pajajaran & Wangsit Siliwangi</a></li>
             </ul>
         </div>
 
@@ -229,3 +230,4 @@
 </body>
 
 </html>
+
