--- a/Wiki Sundaland14.html
+++ b/Wiki Sundaland14.html
@@ -222,6 +222,7 @@
                 <li><a href="#wangsit-siliwangi">3. Amanat Terakhir: Wangsit Siliwangi</a></li>
                 <li><a href="#estafet-kultural">4. Estafet Kultural Pasca-Ngahiang</a></li>
                 <li><a href="#fyi-kamus">5. FYI: Ensiklopedia Tata Kota & Linimasa Wilayah</a></li>
+                <li><a href="Wiki Sundaland17.html">6. Era Kesultanan Awal: Restorasi Maritim & Mahakarya Jong Nusantara</a></li>
             </ul>
         </div>
 
@@ -299,4 +300,5 @@
     </div>
 
 </body>
+
 </html>
