--- a/Wiki Sundaland18.html
+++ b/Wiki Sundaland18.html
@@ -202,6 +202,7 @@
                 <li><a href="#masuknya-dogma">2. Titik Balik: Masuknya Dogma Chola (1025 M)</a></li>
                 <li><a href="#pembajakan-kolonial">3. Abad 18-19: Pembajakan Sejarah oleh Kolonial</a></li>
                 <li><a href="#adu-domba">4. Strategi Adu Domba (Suku Lawan Suku, Agama Lawan Agama)</a></li>
+                <li><a href="Wiki Sundaland19.html">5. Invasi VOC: Jebakan Materi & Pencurian Manuskrip Nusantar</a></li>
             </ul>
         </div>
 
@@ -233,4 +234,5 @@
     </div>
 
 </body>
+
 </html>
