--- a/Wiki Sundaland19.html
+++ b/Wiki Sundaland19.html
@@ -165,7 +165,7 @@
     </div>
 
     <div class="container">
-        <h1>Invasi Siluman VOC: Jebakan Materi & Pencurian Manuskrip Nusantara</h1>
+        <h1>Invasi VOC: Jebakan Materi & Pencurian Manuskrip Nusantara</h1>
 
         <div class="ambox">
             <div>
@@ -208,6 +208,8 @@
                 <li><a href="#agresi-gelap">2. Agresi Gelap & Operasi Intelijen Awal</a></li>
                 <li><a href="#pencurian-manuskrip">3. Pencurian Manuskrip: Merampok Otak Peradaban</a></li>
                 <li><a href="#modifikasi-data">4. Modifikasi Data: Mengapa Manuskrip yang Dikembalikan Patut Dicurigai?</a></li>
+                <li><a href="Wiki Sundaland20.html">5. Skenario 2030: World Reset & Cooling Down Nusantara</a></li>
+                <li><a href="Wiki Sundaland21.html">6. Strategi Pemutusan Matrix: Melawan Distorsi Globalist Cabal</a></li>
             </ul>
         </div>
 
@@ -245,4 +247,5 @@
     </div>
 
 </body>
+
 </html>
