--- a/Wiki Sundaland.html
+++ b/Wiki Sundaland.html
@@ -217,6 +217,7 @@
                 <li><a href="#eksodus">3 Eksodus Besar dan Penyebaran Peradaban</a></li>
                 <li><a href="#pencurian">4 Pencurian Narasi oleh Bangsa Arya (Al-Hind)</a></li>
                 <li><a href="Wiki Sundaland11.html">5 Bangsa Lemuria & Amanah Suku Baduy (Kanekes)</a></li>
+                <li><a href="Wiki Sundaland22.html">6 Tritangtu di Bumi: Sistem Check & Balances Karuhun Nusantara</a></li>
             </ul>
         </div>
 
@@ -253,3 +254,4 @@
 </body>
 
 </html>
+
