--- a/Wiki Sundaland23.html
+++ b/Wiki Sundaland23.html
@@ -215,6 +215,7 @@
                 <li><a href="#siklus-abad20">2. Bedah Kasus: Siklus Abad ke-20 (1900 - 2000)</a></li>
                 <li><a href="#siklus-abad21">3. Siklus Abad ke-21: Kenapa Krisis Terjadi Saat Ini?</a></li>
                 <li><a href="#bajak-rekonstruksi">4. Membajak Fase Rekonstruksi (2045+)</a></li>
+                <li><a href="Wiki Sundaland24.html">5. Bukti Mutlak: Manuskrip Asli Tri Tangtu di Bumi</a></li>
             </ul>
         </div>
 
@@ -268,4 +269,5 @@
     </div>
 
 </body>
+
 </html>
