--- a/Wiki Sundaland23.html
+++ b/Wiki Sundaland23.html
@@ -216,6 +216,7 @@
                 <li><a href="#siklus-abad21">3. Siklus Abad ke-21: Kenapa Krisis Terjadi Saat Ini?</a></li>
                 <li><a href="#bajak-rekonstruksi">4. Membajak Fase Rekonstruksi (2045+)</a></li>
                 <li><a href="Wiki Sundaland24.html">5. Bukti Mutlak: Manuskrip Asli Tri Tangtu di Bumi</a></li>
+                <li><a href="Wiki Sundaland25.html">6. Tafsir & Siloka: Ngabongkar Sandi Uga Tatar Sunda</a></li>
             </ul>
         </div>
 
@@ -271,3 +272,4 @@
 </body>
 
 </html>
+
