--- a/Wiki Sundaland19.html
+++ b/Wiki Sundaland19.html
@@ -210,6 +210,7 @@
                 <li><a href="#modifikasi-data">4. Modifikasi Data: Mengapa Manuskrip yang Dikembalikan Patut Dicurigai?</a></li>
                 <li><a href="Wiki Sundaland20.html">5. Skenario 2030: World Reset & Cooling Down Nusantara</a></li>
                 <li><a href="Wiki Sundaland21.html">6. Strategi Pemutusan Matrix: Melawan Distorsi Globalist Cabal</a></li>
+                <li><a href="Wiki Sundaland26.html">7. VOC & Transformasi Elit Global: Manifestasi Korporasi Penjajah</a></li>
             </ul>
         </div>
 
@@ -249,3 +250,4 @@
 </body>
 
 </html>
+
