--- a/Wiki Sundaland29.html
+++ b/Wiki Sundaland29.html
@@ -80,7 +80,7 @@
                 <li><a href="#zonasi">3. Zonasi Tata Ruang vs Kapitalisme Modern</a></li>
                 <li><a href="#anti-matrix">4. Fungsi Peta Ini di Era World Reset (2026+)</a></li>
 		<li><a href="Wiki Sundaland30.html">5. Carita Parahyangan: Silsilah Estafet Kesadaran & Pembongkaran Ilusi Matrix</a></li>
-		<li><a href="Wiki Sundaland32.html">6. FPemetaan Geofisika: Ring of Fire & Jaringan Energi Kosmik</a></li>
+		<li><a href="Wiki Sundaland32.html">6. Pemetaan Geofisika: Ring of Fire & Jaringan Energi Kosmik</a></li>
             </ul>
         </div>
 
@@ -136,4 +136,5 @@
     </div>
 
 </body>
+
 </html>
