--- a/Wiki Sundaland26.html
+++ b/Wiki Sundaland26.html
@@ -81,6 +81,7 @@
                 <li><a href="#strategi-kontrol">4. Aspek Kontrol Cabal & Strategi Perlawanan</a></li>
                 <li><a href="#runtuhnya-dolar">5. Runtuhnya Ilusi Fiat & Transisi ke Nilai Riil</a></li>
 		<li><a href="Wiki Sundaland28.html">6. Sandi Kosmik: 3 Peradaban Kuno & Manifestasi Tritangtu</a></li>
+				<li><a href="wiki Sundaland34.html">7. Kedaulatan Geotermal: Mengubah "Bisul Bumi" Menjadi Dinamo Rakyat</a></li>
             </ul>
         </div>
 
@@ -178,4 +179,5 @@
     </div>
 
 </body>
+
 </html>
