--- a/Wiki Sundaland40.html
+++ b/Wiki Sundaland40.html
@@ -77,6 +77,9 @@
                 <li><a href="#solusi-mutlak">3. Solusi Kedaulatan: Multi-Profesi & Transaksi P2P</a></li>
                 <li><a href="#kunci-m2">4. Mengunci Suplai M2: Mencegah Inflasi dan Stagflasi</a></li>
 		<li><a href="50 Jasa atau Barang Wajib Bayar Emas atau Perak.html">5. 50 Asét Riil Standar Layak di Bayar Emas & Perak</a></li>
+				<li><a href="Wiki Sundaland45.html">6. Anatomi Krisis: Manipulasi Fiat & Protokol De-Denominasi</a></li>
+				<li><a href="Wiki Sundaland46.html">7. Kedaulatan Logistik: Standar Nilai vs Standar Harga</a></li>
+				<li><a href="Wiki Sundaland48.html">8. Protokol Negosiasi: Standar Harga vs Standar Nilai</a></li>
             </ul>
         </div>
 
@@ -133,4 +136,5 @@
     </div>
 
 </body>
+
 </html>
