--- a/Wiki Sundaland1.html
+++ b/Wiki Sundaland1.html
@@ -185,6 +185,7 @@
                 <li><a href="#salah-ukuran">2 Anomali: Salah Tujuan = Salah Takaran</a></li>
                 <li><a href="#warisan-kesadaran">3 Kegagalan Transfer Nilai (Pendidikan & Keluarga)</a></li>
                 <li><a href="#baterai-bocor">4 De-Evolusi Fisik: Sindrom Manusia Baterai Bocor</a></li>
+                <li><a href="Wiki Sundaland43.html">5 Teknologi Paku Bumi: Seismic Stabilizer (Anti-Urug)</a></li>
             </ul>
         </div>
 
@@ -213,4 +214,5 @@
     </div>
 
 </body>
+
 </html>
