--- a/Wiki Sundaland40.html
+++ b/Wiki Sundaland40.html
@@ -80,6 +80,7 @@
 				<li><a href="Wiki Sundaland45.html">6. Anatomi Krisis: Manipulasi Fiat & Protokol De-Denominasi</a></li>
 				<li><a href="Wiki Sundaland46.html">7. Kedaulatan Logistik: Standar Nilai vs Standar Harga</a></li>
 				<li><a href="Wiki Sundaland48.html">8. Protokol Negosiasi: Standar Harga vs Standar Nilai</a></li>
+				<li><a href="Wiki Sundaland51.html">9. Alkimia Urban Mining: Mengubah Limbah Matrix Menjadi Aset Riil</a></li>
             </ul>
         </div>
 
@@ -138,3 +139,4 @@
 </body>
 
 </html>
+
