--- a/Wiki Sundaland1.html
+++ b/Wiki Sundaland1.html
@@ -186,6 +186,7 @@
                 <li><a href="#warisan-kesadaran">3 Kegagalan Transfer Nilai (Pendidikan & Keluarga)</a></li>
                 <li><a href="#baterai-bocor">4 De-Evolusi Fisik: Sindrom Manusia Baterai Bocor</a></li>
                 <li><a href="Wiki Sundaland43.html">5 Teknologi Paku Bumi: Seismic Stabilizer (Anti-Urug)</a></li>
+                <li><a href="Wiki Sundaland52.html">6 Pedoman Jalan: Iman Kepercayaan vs Iman Ukuran</a></li>
             </ul>
         </div>
 
@@ -216,3 +217,4 @@
 </body>
 
 </html>
+
