--- a/explorer.html
+++ b/explorer.html
@@ -367,6 +367,7 @@
     { url: '34.Nusantara Auto-Anchor (POS Mode).html', label: 'Auto-Anchor POS', icon: '⚓', cat: 'cat-fin' },
     { url: '35.Nusantara Savings Simulator.html', label: 'Simulasi Tabungan', icon: '💰', cat: 'cat-fin' },
     { url: '36.Nusantara Income Generator.html', label: 'Income Generator', icon: '🔨', cat: 'cat-fin' },
+    { url: 'Emas dan Perak Converter.html', label: 'Standar Emas dan Perak Converter', icon: '⚖️', cat: 'cat-culture' },
     { url: '37. Pusat Strategi Ekonomi.html', label: 'Pusat Strategi Ekonomi', icon: '🤝', cat: 'cat-fin' },
     { url: '37. Jam Pasir Timer.html', label: 'Jam Pasir Nusantara', icon: '⏳', cat: 'cat-tools' },
     { url: '38. Kawi Jawa Kuno.html', label: 'Prasasti Jawa Kawi', icon: '🗿', cat: 'cat-lingo' },
@@ -380,6 +381,8 @@
     { url: '01 dokumen viewer.html', label: 'Dokumen Viewer', icon: '📖', cat: 'cat-doc' },
     { url: 'NS-Paint.html', label: 'Nuswantara Paint', icon: '✒️', cat: 'cat-doc' },
     { url: '45. Media Player.html', label: 'Media Player', icon: '🎵', cat: 'cat-doc' },
+    { url: 'GameSnake.html', label: 'Game Ular', icon: '🕹️', cat: 'cat-doc' },
+    { url: 'GameChess.html', label: 'Game Catur', icon: '🎮', cat: 'cat-doc' },
     { url: '46. TV Jadul.html', label: 'TV Jadul', icon: '📺', cat: 'cat-doc' },
     { url: '54. Double Anchor System.html', label: 'Double Anchor System', icon: '⚖️', cat: 'cat-fin' },
     { url: '55. Nilai Komoditas.html', label: 'Daftar Nilai Komoditas', icon: '📚', cat: 'cat-fin' },
@@ -532,6 +535,7 @@
     </script>
 </body>
 </html>
+
 
 
 
