--- a/Wiki Sundaland.html
+++ b/Wiki Sundaland.html
@@ -218,6 +218,7 @@
                 <li><a href="#pencurian">4 Pencurian Narasi oleh Bangsa Arya (Al-Hind)</a></li>
                 <li><a href="Wiki Sundaland11.html">5 Bangsa Lemuria & Amanah Suku Baduy (Kanekes)</a></li>
                 <li><a href="Wiki Sundaland22.html">6 Tritangtu di Bumi: Sistem Check & Balances Karuhun Nusantara</a></li>
+                <li><a href="Wiki Sundaland57.html">7 Selamatkan UMKM & Warung Kecil: Protokol Komunitas</a></li>
             </ul>
         </div>
 
@@ -254,4 +255,5 @@
 </body>
 
 </html>
+
 
