--- a/Wiki Sundaland72.html
+++ b/Wiki Sundaland72.html
@@ -80,6 +80,7 @@
                 <li><a href="#operasi-capit">2. Operasi Capit: Konspirasi Tsar Rusia & Inggris</a></li>
                 <li><a href="#balkanisasi">3. Balkanisasi Matrix: Lahirnya Negara-Negara "-Stan"</a></li>
                 <li><a href="#tabel-fakta">4. Komparasi Mutlak: Tartaria Asli vs Ilusi Sejarah</a></li>
+                <li><a href="Wiki Sundaland73.html">5. Deklasifikasi: Di Balik Tembok Timur & Narasi Kepemilikan Tiongkok</a></li>
             </ul>
         </div>
 
@@ -138,4 +139,5 @@
     </div>
 
 </body>
+
 </html>
