--- a/Wiki Sundaland79.html
+++ b/Wiki Sundaland79.html
@@ -74,6 +74,8 @@
                 <li><a href="#sabotase-modern">2. Sabotase Modern: Kapitalisme & Kabel Dua Inti</a></li>
                 <li><a href="#efek-antena">3. Efek Antena: Mengapa Rumah Modern Sangat Rentan?</a></li>
                 <li><a href="#tabel-komparasi">4. Komparasi: Rumah Beralas vs Rumah Mengambang</a></li>
+                <li><a href="Wiki Sundaland80.html">5. Deklasifikasi: Kesehatan Grounding & Protokol Badai Matahari
+</a></li>
             </ul>
         </div>
 
@@ -130,4 +132,5 @@
     </div>
 
 </body>
+
 </html>
