--- a/Wiki Sundaland84.html
+++ b/Wiki Sundaland84.html
@@ -74,6 +74,7 @@
                 <li><a href="#ilusi-probabilitas">2. Probabilitas, Bukan Pemahaman Makna</a></li>
                 <li><a href="#human-in-loop">3. Rahasia Matrix: Saat Manusia Mengambil Alih (Human-in-the-Loop)</a></li>
                 <li><a href="#alat-bukan-subjek">4. AI Adalah Cermin Buram, Bukan Entitas Sadar</a></li>
+                <li><a href="Wiki Sundaland85.html">5. Deklasifikasi: Pemisahan Terhormat & Runtuhnya Ilusi Toleransi Palsu</a></li>
             </ul>
         </div>
 
@@ -138,4 +139,5 @@
     </div>
 
 </body>
+
 </html>
