--- a/Wiki Sundaland96.html
+++ b/Wiki Sundaland96.html
@@ -74,6 +74,7 @@
                 <li><a href="#inflasi-halu">2. Inflasi Halu: Uang Bertambah, Barang Berkurang</a></li>
                 <li><a href="#drainase-modal">3. Drainase Ekonomi Rakyat: Judol, Pinjol & Impor Ilegal</a></li>
                 <li><a href="#wajib-pacabakan">4. Solusi 5D: Kewajiban "Pacabakan" (Produksi Riil)</a></li>
+                <li><a href="Wiki Sundaland97.html">5. Deklasifikasi: Ilusi Separatisme & Kedaulatan Rumpun Nusantara</a></li>
             </ul>
         </div>
 
@@ -128,4 +129,5 @@
     </div>
 
 </body>
+
 </html>
